[project]
name = "mumuk"
version = "0.1.0"
description = "Assistant for the lazy"
authors = [
    {name = "Rodolfo Olivieri", email = "rodolfo.olivieri3@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
